# outlook-cli

./: .env.example  .gitignore  README.md  SKILL.md  pyproject.toml
scripts/: provision_entra_app.py
skills/outlook/: SKILL.md
skills/outlook/references/: auth.md  body-input.md  calendar.md  mail.md  safety.md
src/outlook_cli/: __init__.py  auth.py  cli.py  graph.py
src/outlook_cli/commands/: __init__.py  _common.py  auth.py  calendar.py  contacts.py  mail.py  skill.py
